syntax = "proto3";
import "data.core.proto";
import "data.reporting.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.reporting;

service Reporting {
  rpc GetSystemEvents (GetSystemEventsRequest) returns (GetSystemEventsResponse);
  
}


// GetSystemEvents

message GetSystemEventsRequest {
}

message GetSystemEventsResponse {
    repeated data.core.SystemEvent systemEvents = 1;
}


